[project]
name = "bluebird-orm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexeev Bronislav", email = "alexeev.dev@mail.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
